num_enum/tests/try_build/compile_fail/multiple_defaults.stderr
error: proc-macro derive panicked
 --> $DIR/multiple_defaults.rs:1:35
  |
1 | #[derive(num_enum::FromPrimitive, num_enum::TryFromPrimitive)]
  |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Multiple variants marked `#[num_enum(default)]` found

error: proc-macro derive panicked
 --> $DIR/multiple_defaults.rs:1:10
  |
1 | #[derive(num_enum::FromPrimitive, num_enum::TryFromPrimitive)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Multiple variants marked `#[num_enum(default)]` found
